automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -109,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cursor.execute('''SELECT name FROM dogs WHERE gender = 'F';''').fetchall()"
+    "cursor.execute('''SELECT name, breed FROM dogs WHERE gender = 'F';''').fetchall()"
    ]
   },
   {
