automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -141,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cursor.execute('''SELECT name FROM dogs WHERE name IS NULL;''').fetchall()"
+    "cursor.execute('''SELECT * FROM dogs WHERE name IS NULL;''').fetchall()"
    ]
   },
   {
