automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -205,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cursor.execute('''SELECT name, breed FROM dogs WHERE age BETWEEN 5 AND 10 ORDER B;''').fetchall()"
+    "cursor.execute('''SELECT name, breed FROM dogs WHERE age BETWEEN 5 AND 10 ORDER BY age DESC;''').fetchall()"
    ]
   },
   {
